<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:tools="http://schemas.android.com/tools"
      tools:showIn="navigation_view">

    <item
            android:id="@+id/navigation_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_home"/>

    <item
            android:id="@+id/navigation_shops"
            android:icon="@drawable/ic_local_mall_black_24dp"
            android:title="@string/nav_shops"/>

    <!--item
            android:id="@+id/navigation_notifications"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_notifications"/-->
    <item
            android:id="@+id/navigation_user"
            android:icon="@drawable/ic_user_back_24dp"
            android:title="@string/navigation_profile"/>

</menu>
