<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/form_shop_name_layout"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/form_shop_name_hint"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/form_shop_image"
                    app:layout_constraintStart_toEndOf="@+id/form_shop_image"
                    android:layout_marginStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/form_shop_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                    android:layout_width="120dp"
                    android:layout_height="120dp"
                    android:scaleType="centerCrop"
                    android:id="@+id/form_shop_image"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@color/colorAccent"
                    app:layout_constraintTop_toTopOf="parent"/>

            <ImageButton
                    android:layout_width="0dp"
                    android:background="#C4C4C4"
                    android:layout_gravity="center_horizontal"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_add_a_photo_black_24dp"
                    android:id="@+id/form_shop_image_button"
                    app:layout_constraintTop_toBottomOf="@+id/form_shop_image"
                    app:layout_constraintEnd_toEndOf="@+id/form_shop_image"
                    app:layout_constraintStart_toStartOf="@+id/form_shop_image"/>


            <View
                    android:id="@+id/divider2"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    style="@style/Divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/form_shop_image_button"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"/>

            <View
                    android:id="@+id/divider3"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    style="@style/Divider"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/form_no_fixed_location"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintHorizontal_bias="0.0"/>

            <View
                    android:id="@+id/divider4"
                    android:layout_width="0dp"
                    android:layout_height="2dp"
                    style="@style/Divider"
                    app:layout_constraintTop_toBottomOf="@+id/form_phone_number_layout"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginTop="8dp"
                    android:layout_marginStart="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/form_shop_campus_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/form_campus_hint"
                    app:layout_constraintTop_toBottomOf="@+id/divider2"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginStart="8dp"
                    app:endIconMode="dropdown_menu"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    android:layout_marginTop="8dp">

                <AutoCompleteTextView
                        android:id="@+id/form_shop_campus"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/form_shop_location_layout"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/form_localization_header"
                    app:layout_constraintTop_toBottomOf="@+id/form_shop_campus_layout"
                    app:layout_constraintStart_toEndOf="@+id/imageView2"
                    android:layout_marginStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/form_shop_location"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <CheckBox
                    android:id="@+id/form_no_fixed_location"
                    android:text="@string/form_no_fixed_location"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/form_shop_location_layout"
                    app:layout_constraintStart_toStartOf="@+id/form_shop_location_layout"
                    android:layout_marginStart="8dp"/>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/form_open_hour_layout"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:hint="@string/form_open_hour_hint"
                    app:errorEnabled="true"
                    android:ems="10"
                    android:layout_marginEnd="16dp"
                    app:layout_constraintEnd_toStartOf="@+id/form_close_hour_layout"
                    app:layout_constraintStart_toEndOf="@+id/imageView3"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/divider3"
                    app:layout_constraintHorizontal_bias="0.5"
                    android:layout_marginTop="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/form_open_hour"
                        android:maxLength="5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/form_close_hour_layout"
                    android:inputType="number"
                    android:layout_width="130dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/form_close_hour_hint"
                    android:ems="10"
                    app:errorEnabled="true"
                    android:layout_marginEnd="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/form_open_hour_layout"
                    app:layout_constraintBottom_toBottomOf="@+id/form_open_hour_layout"
                    app:layout_constraintStart_toEndOf="@+id/form_open_hour_layout"
                    app:layout_constraintHorizontal_bias="0.5"
                    android:layout_marginStart="16dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/form_close_hour"
                        android:maxLength="5"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/form_phone_number_layout"
                    android:inputType="phone"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/form_phone_number_hint"
                    app:errorEnabled="true"
                    app:counterEnabled="true"
                    app:counterMaxLength="15"
                    android:ems="10"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginTop="16dp"
                    app:layout_constraintTop_toBottomOf="@+id/form_open_hour_layout"
                    app:layout_constraintStart_toEndOf="@+id/imageView4"
                    android:layout_marginStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/form_phone_number"
                        android:maxLength="15"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/form_shop_description_layout"
                    android:inputType="textMultiLine"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:hint="@string/form_description_hint"
                    android:ems="10"
                    app:layout_constraintTop_toBottomOf="@+id/divider4"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintStart_toEndOf="@+id/imageView7"
                    android:layout_marginStart="8dp">

                <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/form_shop_description"
                        android:minLines="3"
                        android:gravity="top"
                        android:textAppearance="?attr/textAppearanceSubtitle1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_location_on_black_24dp"
                    android:id="@+id/imageView2"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/form_shop_campus_layout"
                    app:layout_constraintBottom_toBottomOf="@+id/form_shop_campus_layout"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_access_time_black_24dp"
                    android:id="@+id/imageView3"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/form_open_hour_layout"
                    app:layout_constraintBottom_toBottomOf="@+id/form_open_hour_layout"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_phone_black_24dp"
                    android:id="@+id/imageView4"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/form_phone_number_layout"
                    app:layout_constraintBottom_toBottomOf="@+id/form_phone_number_layout"/>

            <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:srcCompat="@drawable/ic_description_black_24dp"
                    android:id="@+id/imageView7"
                    app:layout_constraintStart_toStartOf="parent"
                    android:layout_marginStart="8dp"
                    app:layout_constraintTop_toTopOf="@+id/form_shop_description_layout"
                    app:layout_constraintBottom_toBottomOf="@+id/form_shop_description_layout"/>


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/form_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end|bottom"
            app:srcCompat="@drawable/ic_send_black_24dp"
            android:layout_marginEnd="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="16dp"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"/>

</RelativeLayout>